# libsoundtrackutil

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmakeUtils/: conanutils.cmake  formatting.cmake  unix.cmake
conan/: conanfile.py  deploy.bat
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
libsoundtrackutil/: CMakeLists.txt
libsoundtrackutil/include/libsoundtrackutil/: ByteStream.h  SoundtrackIPC.h  TwitchAudioPacket.h
libsoundtrackutil/src/: SoundtrackIPC.cpp
